--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/App_LocalResources/tabs.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/App_LocalResources/tabs.nl-NL.resx
@@ -13,7 +13,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="lblAdminOnly.Text" xml:space="preserve">
-    <value>Alleen zichtbaar voor beheerders</value>
+    <value>Alleen zichtbaar voor sitebeheerders</value>
   </data>
   <data name="lblEveryone.Text" xml:space="preserve">
     <value>De pagina is zichtbaar voor iedereen</value>
