--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Roles.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Roles.ascx.nl-NL.resx
@@ -34,7 +34,7 @@
     <value>Tarief</value>
   </data>
   <data name="ModuleHelp.Text" xml:space="preserve">
-    <value>&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen beheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, Rollen kunnen worden verwijderd en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
+    <value>&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen sitebeheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, Rollen kunnen worden verwijderd en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
   </data>
   <data name="Name.Header" xml:space="preserve">
     <value>Naam</value>
