--- a/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
@@ -115,6 +115,6 @@
     <value>Verzending van de e-mail is mislukt. De SMTP is niet correct geconfigureerd.</value>
   </data>
   <data name="UserLockedOut.Text" xml:space="preserve">
-    <value>Dit account is vergrendeld na te veel mislukte inlog pogingen. Wacht alstublieft 10 minuten alvorens het opnieuw te proberen. Als je je wachtwoord vergeten bent, probeer dan gebruik te maken van de optie wachtwoord herstellen, alvorens contact op te nemen met een beheerder.</value>
+    <value>Dit account is vergrendeld na te veel mislukte inlog pogingen. Wacht alstublieft 10 minuten alvorens het opnieuw te proberen. Als je je wachtwoord vergeten bent, probeer dan gebruik te maken van de optie wachtwoord herstellen, alvorens contact op te nemen met een sitebeheerder.</value>
   </data>
 </root>
