--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Users/App_LocalResources/users.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Users/App_LocalResources/users.nl-NL.resx
@@ -67,10 +67,10 @@
     <value>Annuleren</value>
   </data>
   <data name="CannotAddUser.Text" xml:space="preserve">
-    <value>Deze site is geconfigureerd om te vereisen dat gebruikers Vraag en antwoord invullen om wachtwoordherinneringen te ontvangen. Deze configuratie is onverenigbaar met beheerders die gebruikers toevoegen en is daarom uitgeschakeld voor deze site. </value>
+    <value>Deze site is geconfigureerd om te vereisen dat gebruikers Vraag en antwoord invullen om wachtwoordherinneringen te ontvangen. Deze configuratie is onverenigbaar met sitebeheerders die gebruikers toevoegen en is daarom uitgeschakeld voor deze site. </value>
   </data>
   <data name="CannotChangePassword.Text" xml:space="preserve">
-    <value>Uw configuratie vereist de gebruiker om een Vraag en Antwoord in te vullen voor een wachtwoordherinnering. Wanneer deze instelling is toegepast zullen beheerders niet in staat zijn om het wachtwoord van een gebruiker te veranderen, daarom is deze mogelijheid uitgeschakeld voor deze site. </value>
+    <value>Uw configuratie vereist de gebruiker om een Vraag en Antwoord in te vullen voor een wachtwoordherinnering. Wanneer deze instelling is toegepast zullen sitebeheerders niet in staat zijn om het wachtwoord van een gebruiker te veranderen, daarom is deze mogelijheid uitgeschakeld voor deze site. </value>
   </data>
   <data name="ChangePassword.Text" xml:space="preserve">
     <value>Wijzig wachtwoord</value>
@@ -343,7 +343,7 @@
     <value>Gebruiker ID van gebruiker voor wie de rollen zullen worden toegevoegd. Als een nummer word gebruikt als eerste argument is het niet nodig om de &lt;span class="mono"&gt;--id&lt;/span&gt; vlag expliciet te gebruiken</value>
   </data>
   <data name="Prompt_AddRoles_FlagRoles.Text" xml:space="preserve">
-    <value>Komma-gescheiden reeks van DNN rol namen om toe te passen op de gebruiker.</value>
+    <value>Komma-gescheiden reeks van DNN rolnamen om toe te passen op de gebruiker.</value>
   </data>
   <data name="Prompt_AddRoles_FlagStart.Text" xml:space="preserve">
     <value>Ingangsdatum van de rol.</value>
