--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/SecurityRoles.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/SecurityRoles.ascx.nl-NL.resx
@@ -49,7 +49,7 @@
     <value>Is eigenaar</value>
   </data>
   <data name="ModuleHelp.Text" xml:space="preserve">
-    <value>&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen beheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, rollen kunnen worden verwijderd, en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
+    <value>&lt;h1&gt;Over toegangsrollen&lt;/h1&gt;&lt;p&gt;Met behulp van deze module kunnen sitebeheerders de toegangsrollen van hun website beheren. Er kunnen nieuwe rollen worden aangemaakt, bestaande rollen kunnen worden gewijzigd, rollen kunnen worden verwijderd, en de toewijzing van rollen aan gebruikers kan worden beheerd.&lt;/p&gt;</value>
   </data>
   <data name="NotAuthorized.Text" xml:space="preserve">
     <value>Je bent niet gemachtigd om deze rol te wijzigen.</value>
