--- a/Resources/Install/App_LocalResources/Installwizard.aspx.nl-NL.resx
+++ b/Resources/Install/App_LocalResources/Installwizard.aspx.nl-NL.resx
@@ -223,7 +223,7 @@ Bij gebruik van Windows Explorer, browse naar de folders van uw website ( {0} ).
     <value>AppPool in IIS moet onder Integrated Mode draaien</value>
   </data>
   <data name="ImprovementProgramExplain.Text" xml:space="preserve">
-    <value>Het product verbeter programma stelt ons in staat om een beter beeld te krijgen hoe we DNN kunnen verbeteren voor jou. De data helpt ons om het gebruik te analyseren en om te zien wat belangrijk is voor de mensen die ons product gebruiken. Alle data is anoniem en alleen voor intern gebruik. Kijk voor meer informatie op &amp;lt;a href="http://www.dnnsoftware.com/dnn-improvement-program" target="_blank"&amp;gt;Product Improvement Program&amp;lt;/a&amp;gt;.</value>
+    <value>Het product verbeter programma stelt ons in staat om een beter beeld te krijgen hoe we DNN kunnen verbeteren voor jou. De data helpt ons om het gebruik te analyseren en om te zien wat belangrijk is voor de mensen die ons product gebruiken. Alle data is anoniem en alleen voor intern gebruik. Kijk voor meer informatie op &amp;lt;a href="https://www.dnnsoftware.com/dnn-improvement-program" target="_blank"&amp;gt;Product Improvement Program&amp;lt;/a&amp;gt;.</value>
   </data>
   <data name="ImprovementProgramLabel.Text" xml:space="preserve">
     <value>Stuur anonieme gebruikersinformatie naar DNN</value>
