--- a/Resources/Install/App_LocalResources/UpgradeWizard.aspx.nl-NL.resx
+++ b/Resources/Install/App_LocalResources/UpgradeWizard.aspx.nl-NL.resx
@@ -41,7 +41,7 @@ Voordat je verder gaat met de geautomatiseerde upgrade-proces moetje ervoor zorg
     <value>Uitbreidingen bijwerken</value>
   </data>
   <data name="ImprovementProgramExplain.Text" xml:space="preserve">
-    <value>Het productverbeterprogramma stelt de DNN Community in staat om beter te kunnen begrijpen hoe we DNN kunnen verbeteren. De gegevens helpen ons het gebruik te analyseren en laten ons inzien wat belangrijk is voor de mensen die dit product gebruiken. Alle data is anoniem en alleen voor intern gebruik. Voor meer informatie over het&lt;a href="http://www.dnnsoftware.com/dnn-improvement-program" target="_blank"&gt;Product Improvement Program&lt;/a&gt;.</value>
+    <value>Het productverbeterprogramma stelt de DNN Community in staat om beter te kunnen begrijpen hoe we DNN kunnen verbeteren. De gegevens helpen ons het gebruik te analyseren en laten ons inzien wat belangrijk is voor de mensen die dit product gebruiken. Alle data is anoniem en alleen voor intern gebruik. Voor meer informatie over het&lt;a href="https://www.dnnsoftware.com/dnn-improvement-program" target="_blank"&gt;Product Improvement Program&lt;/a&gt;.</value>
   </data>
   <data name="ImprovementProgramLabel.Text" xml:space="preserve">
     <value>Stuur anonieme gebruiksinformatie naar DNN</value>
