--- a/Resources/admin/Skins/App_LocalResources/Search.ascx.nl-NL.resx
+++ b/Resources/admin/Skins/App_LocalResources/Search.ascx.nl-NL.resx
@@ -37,7 +37,7 @@
     <value>Doorzoek de website</value>
   </data>
   <data name="URL.Text" xml:space="preserve">
-    <value>http://www.google.com/custom?q=[TEXT]&amp;sa=Search&amp;client=pub-9770992166002654&amp;forid=1&amp;ie=ISO-8859-1&amp;oe=ISO-8859-1&amp;cof=GALT%3A%23008000%3BGL%3A1%3BDIV%3A%23336699%3BVLC%3A663399%3BAH%3Acenter%3BBGC%3AFFFFFF%3BLBGC%3A336699%3BALC%3A0000FF%3BLC%3A0000FF%3BT%3A000000%3BGFNT%3A0000FF%3BGIMP%3A0000FF%3BFORID%3A1&amp;hl=en&amp;sitesearch=[DOMAIN]</value>
+    <value>https://www.google.com/custom?q=[TEXT]&amp;sa=Search&amp;client=pub-9770992166002654&amp;forid=1&amp;ie=ISO-8859-1&amp;oe=ISO-8859-1&amp;cof=GALT%3A%23008000%3BGL%3A1%3BDIV%3A%23336699%3BVLC%3A663399%3BAH%3Acenter%3BBGC%3AFFFFFF%3BLBGC%3A336699%3BALC%3A0000FF%3BLC%3A0000FF%3BT%3A000000%3BGFNT%3A0000FF%3BGIMP%3A0000FF%3BFORID%3A1&amp;hl=en&amp;sitesearch=[DOMAIN]</value>
   </data>
   <data name="Web.Text" xml:space="preserve">
     <value>Web</value>
