--- a/Resources/DesktopModules/Journal/App_LocalResources/Edit.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Journal/App_LocalResources/Edit.ascx.nl-NL.resx
@@ -13,6 +13,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ControlTitle_edit.Text">
-    <value xml:space="preserve">Dagboek bewerken</value>
+    <value xml:space="preserve">Tijdlijn bewerken</value>
   </data>
 </root>
