--- a/Resources/DesktopModules/Journal/App_LocalResources/Settings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Journal/App_LocalResources/Settings.ascx.nl-NL.resx
@@ -1,5 +1,110 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -7,57 +112,57 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AllowFiles.Help" lastModified="2015-12-31 10:45:22">
-    <value xml:space="preserve">Selecteer deze optie om te bepalen of gebruikers wel of niet bestanden aan dagboek posts mogen toevoegen.</value>
+  <data name="AllowFiles.Help" xml:space="preserve">
+    <value>Selecteer deze optie om te bepalen of gebruikers wel of niet bestanden aan tijdlijn berichten mogen toevoegen.</value>
   </data>
-  <data name="AllowFiles.Text">
-    <value xml:space="preserve">Bestandsbijlagen inschakelen</value>
+  <data name="AllowFiles.Text" xml:space="preserve">
+    <value>Bestandsbijlagen inschakelen</value>
   </data>
-  <data name="AllowPhotos.Help" lastModified="2015-12-31 10:45:22">
-    <value xml:space="preserve">Selecteer deze optie om te bepalen of gebruikers wel of niet foto's aan dagboek posts mogen toevoegen.</value>
+  <data name="AllowPhotos.Help" xml:space="preserve">
+    <value>Selecteer deze optie om te bepalen of gebruikers wel of niet foto's aan tijdlijn berichten mogen toevoegen.</value>
   </data>
-  <data name="AllowPhotos.Text">
-    <value xml:space="preserve">Fotobijlagen inschakelen</value>
+  <data name="AllowPhotos.Text" xml:space="preserve">
+    <value>Fotobijlagen inschakelen</value>
   </data>
-  <data name="AllowResize.Help" lastModified="2015-12-31 10:45:22">
-    <value xml:space="preserve">Selecteer deze optie om te bepalen of geuploaden foto's in grootte moeten worden aangepast, alleen de foto's groter dan 400px worden aangepast.</value>
+  <data name="AllowResize.Help" xml:space="preserve">
+    <value>Selecteer deze optie om te bepalen of geuploaden foto's in grootte moeten worden aangepast, alleen de foto's groter dan 400px worden aangepast.</value>
   </data>
-  <data name="AllowResize.Text">
-    <value xml:space="preserve">Foto's in grootte aanpassen</value>
+  <data name="AllowResize.Text" xml:space="preserve">
+    <value>Foto's in grootte aanpassen</value>
   </data>
-  <data name="ControlTitle_settings.Text">
-    <value xml:space="preserve">Dagboek instellingen</value>
+  <data name="ControlTitle_settings.Text" xml:space="preserve">
+    <value>Tijdlijn instellingen</value>
   </data>
-  <data name="DefaultPageSize.Help">
-    <value xml:space="preserve">Selecteer het aantal logboekitems dat moet worden weergegeven op een pagina.</value>
+  <data name="DefaultPageSize.Help" xml:space="preserve">
+    <value>Selecteer het aantal tijdlijnberichten dat moet worden weergegeven op een pagina.</value>
   </data>
-  <data name="DefaultPageSize.Text">
-    <value xml:space="preserve">Standaard pagina lengte</value>
+  <data name="DefaultPageSize.Text" xml:space="preserve">
+    <value>Standaard pagina lengte</value>
   </data>
-  <data name="EnableEditor.Help">
-    <value xml:space="preserve">Gebruik deze optie, in- of uitschakelen, van directe dagboek invoer met behulp van de dagboek bewerker.</value>
+  <data name="EnableEditor.Help" xml:space="preserve">
+    <value>Gebruik deze optie, in- of uitschakelen, van directe tijdlijn invoer door de tijdlijn bewerker.</value>
   </data>
-  <data name="EnableEditor.Text">
-    <value xml:space="preserve">Inschakelen dagboek bewerker </value>
+  <data name="EnableEditor.Text" xml:space="preserve">
+    <value>Inschakelen tijdlijn bewerker </value>
   </data>
-  <data name="JournalFilters.Help">
-    <value xml:space="preserve">Selecteer de dagboektypes die moeten worden weergegeven</value>
+  <data name="JournalFilters.Help" xml:space="preserve">
+    <value>Selecteer de tijdlijntypes die moeten worden weergegeven</value>
   </data>
-  <data name="JournalFilters.Text">
-    <value xml:space="preserve">Dagboektypes</value>
+  <data name="JournalFilters.Text" xml:space="preserve">
+    <value>Tijdlijntypes</value>
   </data>
-  <data name="MaxMessageLength.Help">
-    <value xml:space="preserve">Selecteer het maximum aantal tekens dat een dagboek bericht kan bevatten.</value>
+  <data name="MaxMessageLength.Help" xml:space="preserve">
+    <value>Selecteer het maximum aantal tekens dat een tijdlijn bericht kan bevatten.</value>
   </data>
-  <data name="MaxMessageLength.Text">
-    <value xml:space="preserve">Maximaal tekens per bericht</value>
+  <data name="MaxMessageLength.Text" xml:space="preserve">
+    <value>Maximaal tekens per bericht</value>
   </data>
-  <data name="MessageLength_Unlimited.Text">
-    <value xml:space="preserve">Ongelimiteerd</value>
+  <data name="MessageLength_Unlimited.Text" xml:space="preserve">
+    <value>Ongelimiteerd</value>
   </data>
 </root>
