--- a/Resources/DesktopModules/Journal/App_LocalResources/View.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Journal/App_LocalResources/View.ascx.nl-NL.resx
@@ -1,5 +1,110 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
   </resheader>
@@ -7,81 +112,81 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Attach.Text">
-    <value xml:space="preserve">Bijvoegen</value>
+  <data name="Attach.Text" xml:space="preserve">
+    <value>Bijvoegen</value>
   </data>
-  <data name="BrowseFromSite.Text">
-    <value xml:space="preserve">Blader vanuit site</value>
+  <data name="BrowseFromSite.Text" xml:space="preserve">
+    <value>Blader op bestandssysteem van website</value>
   </data>
-  <data name="Cancel.Text">
-    <value xml:space="preserve">Annuleren</value>
+  <data name="Cancel.Text" xml:space="preserve">
+    <value>Annuleren</value>
   </data>
-  <data name="Community.Text">
-    <value xml:space="preserve">Leden van de gemeenschap</value>
+  <data name="Community.Text" xml:space="preserve">
+    <value>Leden van de website</value>
   </data>
-  <data name="DeleteItem.Text">
-    <value xml:space="preserve">Weet u zeker dat u dit onderdeel wilt verwijderen?</value>
+  <data name="DeleteItem.Text" xml:space="preserve">
+    <value>Weet je zeker dat je dit onderdeel wilt verwijderen?</value>
   </data>
-  <data name="EditModule.Text">
-    <value xml:space="preserve">Module bewerken</value>
+  <data name="EditModule.Text" xml:space="preserve">
+    <value>Module bewerken</value>
   </data>
-  <data name="Everyone.Text">
-    <value xml:space="preserve">Iedereen</value>
+  <data name="Everyone.Text" xml:space="preserve">
+    <value>Iedereen</value>
   </data>
-  <data name="FileSize.Header">
-    <value xml:space="preserve">Bestandsgrootte:</value>
+  <data name="FileSize.Header" xml:space="preserve">
+    <value>Bestandsgrootte:</value>
   </data>
-  <data name="Friends.Text">
-    <value xml:space="preserve">Vrienden</value>
+  <data name="Friends.Text" xml:space="preserve">
+    <value>Vrienden</value>
   </data>
-  <data name="GetMore.Text">
-    <value xml:space="preserve">Meer vrienden</value>
+  <data name="GetMore.Text" xml:space="preserve">
+    <value>Meer vrienden</value>
   </data>
-  <data name="GroupMembers.Text" lastModified="2016-03-08 14:26:03">
-    <value xml:space="preserve">Groepsleden</value>
+  <data name="GroupMembers.Text" xml:space="preserve">
+    <value>Groepsleden</value>
   </data>
-  <data name="LastModified.Header">
-    <value xml:space="preserve">Laatst gewijzigd</value>
+  <data name="LastModified.Header" xml:space="preserve">
+    <value>Laatst gewijzigd</value>
   </data>
-  <data name="Name.Header">
-    <value xml:space="preserve">Naam</value>
+  <data name="Name.Header" xml:space="preserve">
+    <value>Naam</value>
   </data>
-  <data name="Of.Text">
-    <value xml:space="preserve">van</value>
+  <data name="Of.Text" xml:space="preserve">
+    <value>van</value>
   </data>
-  <data name="Private.Text">
-    <value xml:space="preserve">Privé</value>
+  <data name="Private.Text" xml:space="preserve">
+    <value>Privé</value>
   </data>
-  <data name="SelectFile.Text">
-    <value xml:space="preserve">Selecteer bestand om te delen:</value>
+  <data name="SelectFile.Text" xml:space="preserve">
+    <value>Selecteer bestand om te delen:</value>
   </data>
-  <data name="SelectPhoto.Text">
-    <value xml:space="preserve">Selecteer foto om te delen:</value>
+  <data name="SelectPhoto.Text" xml:space="preserve">
+    <value>Selecteer foto om te delen:</value>
   </data>
-  <data name="ServerError.Text">
-    <value xml:space="preserve">Onverwachte fout. Dit gebeurt doorgaans wanneer het bestand te groot is.</value>
+  <data name="ServerError.Text" xml:space="preserve">
+    <value>Onverwachte fout. Dit gebeurt doorgaans wanneer het bestand te groot is.</value>
   </data>
-  <data name="Share.Text">
-    <value xml:space="preserve">Delen</value>
+  <data name="Share.Text" xml:space="preserve">
+    <value>Delen</value>
   </data>
-  <data name="SharePlaceHolder.Text">
-    <value xml:space="preserve">Vertel de wereld iets...</value>
+  <data name="SharePlaceHolder.Text" xml:space="preserve">
+    <value>Deel iets op deze tijdlijn...</value>
   </data>
-  <data name="Title.Text">
-    <value xml:space="preserve">Blader naar bestand om te gebruiken</value>
+  <data name="Title.Text" xml:space="preserve">
+    <value>Blader naar bestand om te gebruiken</value>
   </data>
-  <data name="Type.Header">
-    <value xml:space="preserve">Type</value>
+  <data name="Type.Header" xml:space="preserve">
+    <value>Type</value>
   </data>
-  <data name="UploadFromLocal.Text">
-    <value xml:space="preserve">Uploaden van mijn computer</value>
+  <data name="UploadFromLocal.Text" xml:space="preserve">
+    <value>Uploaden vanaf mijn computer</value>
   </data>
-  <data name="WhoWillSee.Text">
-    <value xml:space="preserve">Wie ziet dit?</value>
+  <data name="WhoWillSee.Text" xml:space="preserve">
+    <value>Wie kan dit zien?</value>
   </data>
 </root>
