--- a/Resources/DesktopModules/Journal/App_LocalResources/Settings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Journal/App_LocalResources/Settings.ascx.nl-NL.resx
@@ -7,19 +7,19 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AllowFiles.Help" xml:space="preserve">
-    <value>Selecteer deze optie om te bepalen of gebruikers wel of niet bestanden aan dagboek posts mogen toevoegen.</value>
+    <value>Selecteer deze optie om te bepalen of gebruikers wel of niet bestanden aan tijdlijn berichten mogen toevoegen.</value>
   </data>
   <data name="AllowFiles.Text" xml:space="preserve">
     <value>Bestandsbijlagen inschakelen</value>
   </data>
   <data name="AllowPhotos.Help" xml:space="preserve">
-    <value>Selecteer deze optie om te bepalen of gebruikers wel of niet foto's aan dagboek posts mogen toevoegen.</value>
+    <value>Selecteer deze optie om te bepalen of gebruikers wel of niet foto's aan tijdlijn berichten mogen toevoegen.</value>
   </data>
   <data name="AllowPhotos.Text" xml:space="preserve">
     <value>Fotobijlagen inschakelen</value>
@@ -31,28 +31,28 @@
     <value>Foto's in grootte aanpassen</value>
   </data>
   <data name="ControlTitle_settings.Text" xml:space="preserve">
-    <value>Dagboekinstellingen</value>
+    <value>Tijdlijn instellingen</value>
   </data>
   <data name="DefaultPageSize.Help" xml:space="preserve">
-    <value>Selecteer het aantal logboekitems dat moet worden weergegeven op een pagina.</value>
+    <value>Selecteer het aantal tijdlijnberichten dat moet worden weergegeven op een pagina.</value>
   </data>
   <data name="DefaultPageSize.Text" xml:space="preserve">
-    <value>Standaard paginalengte</value>
+    <value>Standaard pagina lengte</value>
   </data>
   <data name="EnableEditor.Help" xml:space="preserve">
-    <value>Gebruik deze optie om directe bewerking van de dagboekinvoer met behulp van de dagboekbewerker wel of niet mogelijk te maken</value>
+    <value>Gebruik deze optie, in- of uitschakelen, van directe tijdlijn invoer door de tijdlijn bewerker.</value>
   </data>
   <data name="EnableEditor.Text" xml:space="preserve">
-    <value>Inschakelen dagboekbewerker </value>
+    <value>Inschakelen tijdlijn bewerker </value>
   </data>
   <data name="JournalFilters.Help" xml:space="preserve">
-    <value>Selecteer de dagboektypes die moeten worden weergegeven</value>
+    <value>Selecteer de tijdlijntypes die moeten worden weergegeven</value>
   </data>
   <data name="JournalFilters.Text" xml:space="preserve">
-    <value>Dagboektypes</value>
+    <value>Tijdlijntypes</value>
   </data>
   <data name="MaxMessageLength.Help" xml:space="preserve">
-    <value>Selecteer het maximum aantal tekens dat een dagboek bericht kan bevatten.</value>
+    <value>Selecteer het maximum aantal tekens dat een tijdlijn bericht kan bevatten.</value>
   </data>
   <data name="MaxMessageLength.Text" xml:space="preserve">
     <value>Maximaal tekens per bericht</value>
