--- a/Resources/DesktopModules/Journal/App_LocalResources/View.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Journal/App_LocalResources/View.ascx.nl-NL.resx
@@ -7,22 +7,22 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Attach.Text" xml:space="preserve">
     <value>Bijvoegen</value>
   </data>
   <data name="BrowseFromSite.Text" xml:space="preserve">
-    <value>Blader vanuit site</value>
+    <value>Blader op bestandssysteem van website</value>
   </data>
   <data name="Cancel.Text" xml:space="preserve">
     <value>Annuleren</value>
   </data>
   <data name="Community.Text" xml:space="preserve">
-    <value>Leden van de gemeenschap</value>
+    <value>Leden van de website</value>
   </data>
   <data name="DeleteItem.Text" xml:space="preserve">
     <value>Weet je zeker dat je dit onderdeel wilt verwijderen?</value>
@@ -70,7 +70,7 @@
     <value>Delen</value>
   </data>
   <data name="SharePlaceHolder.Text" xml:space="preserve">
-    <value>Vertel de wereld iets...</value>
+    <value>Deel iets op deze tijdlijn...</value>
   </data>
   <data name="Title.Text" xml:space="preserve">
     <value>Blader naar bestand om te gebruiken</value>
@@ -79,9 +79,9 @@
     <value>Type</value>
   </data>
   <data name="UploadFromLocal.Text" xml:space="preserve">
-    <value>Uploaden van mijn computer</value>
+    <value>Uploaden vanaf mijn computer</value>
   </data>
   <data name="WhoWillSee.Text" xml:space="preserve">
-    <value>Wie ziet dit?</value>
+    <value>Wie kan dit zien?</value>
   </data>
 </root>
